--- a/exo-clem/css/exo1.css
+++ b/exo-clem/css/exo1.css
@@ -1,12 +1,18 @@
-/* main {
-    width: 400px;
-    height: 300px;
-    border: 5px solid black;
-} */
-
-.mouseout {
+/* clémence */
+/* .mouseout {
     width: 400px;
     height: 300px;
     border: 5px solid black;
     background-color: white;
+} */
+
+
+/* LAURENT prof */
+main {
+    width: 400px;
+    height: 300px;
+    border: 5px solid black;
 }
+
+
+
