--- a/e-learning-js/2-9(carRental-JS)/style.css
+++ b/e-learning-js/2-9(carRental-JS)/style.css
@@ -23,6 +23,9 @@
 .justify-around {
     justify-content: space-between;
 }
+.justify-between {
+    justify-content: space-between;
+}
 .justify-evenly {
     justify-content: space-evenly;
 }
@@ -32,15 +35,18 @@
 .align-center {
     align-items: center;
 }
+.text-center {
+    text-align: center;
+}
 .color_white {
     color: white;
 }
 .padding {
     padding: 1rem;
 }
-/* .bg-color-white {
+.bg-color-white {
     background-color: rgba(255, 255, 255, 0.8);
-} */
+}
 #burger_menu .bg-color-black {
     background-color: black
 }
@@ -66,7 +72,7 @@ ul {
     list-style: none;
 }
 p {
-    font-size: 0.8rem;
+    font-size: 0.8em;
 }
 
 
@@ -90,7 +96,6 @@ header {
     width: 60%;
     background-color:rgba(255, 255, 255, 0.6);
     margin: 7% 0;
-
 }
 #scrolling_menu {
     display: none;
@@ -122,7 +127,7 @@ h1 {
     padding: 0.4rem 0 0.4rem 0.4rem;
     background-color: rgba(189, 195, 199, 0.6);
 }
-#submitPart {
+#submit-part {
     width: 20%;
 }
 #pickup_part select,
@@ -130,7 +135,7 @@ h1 {
     width: 28.33%;
     padding: 0.4rem 0 0.4rem 1rem;
 }
-#submitPart input{
+#submit-part input{
     width: 100%;
     height: 100%;
     background-color: rgba(70, 157, 70, 0.6);
@@ -174,14 +179,155 @@ input[type='date']::after {
 
 /* -------------------------- */
 /* MAIN */
+#results,
+.car_description {
+    width: 65vw;
+}
+#results span {
+    font-size: 1.5rem;
+}
+#results select {
+    border: 1px solid rgba(189, 195, 199, 0.6);
+    border-radius: 10%;
+    background-color: rgb(240, 242, 243);
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    background-image: url("data:image/svg+xml;utf8,<svg fill='black' height='24' viewBox='0 0 24 24' width='24' xmlns='http://www.w3.org/2000/svg'><path d='M7 10l5 5 5-5z'/><path d='M0 0h24v24H0z' fill='none'/></svg>");
+    background-repeat: no-repeat;
+    background-position-x: 100%;
+    background-position-y: center;
+    padding: 0.4rem 1.3rem;
+}
+
+.car_description {
+    padding: 3rem 0;
+    border-bottom: 1px solid rgba(127,140,141,0.1);
+}
+.arrow_left {
+    border-top: 8px solid transparent;
+    border-bottom: 8px solid transparent;
+    border-right: 8px solid black;
+    cursor: pointer;
+}
+.arrow_right {
+    border-top: 8px solid transparent;
+    border-bottom: 8px solid transparent;
+    border-left: 8px solid black;
+    cursor: pointer;
+}
+.car_description > div:nth-of-type(1){
+    width: 50%;
+    margin-right: 3rem;
+}
+.img_outer {
+    overflow: hidden;
+    width: 70%;
+}
+.img_outer img {
+    min-width: 100%;
+    max-width: 100%;
+}
+.img_container {
+    position: relative;
+}
+.car_description h3,
+.car_description p {
+    line-height: 1.5rem;
+}
+.car_description button {
+    background-color: rgba(70, 157, 70, 1);
+    padding: 0.4rem;
+    color: white;
+    border-radius: 10%;
+    border: 0.4mm ridge rgba(0,0,0,0.6);
+}
 
 
 /* -------------------------- */
 /* FOOTER */
+footer img {
+    width: 100px;
+    padding-bottom: 10px;
+}
+footer ul {
+    padding-bottom: 15px;
+}
 
 
 
+/* ------------------------------------ */
+/* ------------------------------------ */
 /* RWD */
 /* SMARTPHONES */
+@media screen and (max-width : 575.98px) {
+    #rental_form,
+    #results,
+    .car_description {
+        width: 90vw;
+    }
+    #header_renting_part {
+        justify-content: space-around;
+    }
+    #rental_form #pickup_part select ,
+    #rental_form #pickup_part input {
+        margin: 0;
+        width: 100%;
+    }
+    #rental_form #pickup_part input:nth-of-type(1) {
+        margin: 0.4rem 0;
+    }
+    .img_outer {
+        width: 80%;
+    }
+}
+
+/* -------------------------- */
 /* TABLETS & SMARTPHONES */
+@media screen and (max-width : 991.98px) {
+    #rental_form {
+        flex-direction: column;
+    }
+    #pickup_part {
+        padding: 0.4rem;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+    #pickup_part,
+    #submitPart {
+        width: 100%;
+    }
+    #submitPart input {
+        padding: 0.5rem;
+    }
+    #results select {
+        position: relative;
+        top: 20px;
+    }
+    .car_details h3,
+    .car_details p {
+        display: none;
+    }
+    .car_description {
+        justify-content: space-between;
+    }
+    .car_description > div:nth-of-type(1) {
+        width: 70%;
+        margin-right: 0;
+    }
+}
+
+/* -------------------------- */
 /* TABLETS */
+@media screen and (min-width : 575.99px) and (max-width : 991.98px) {
+    #rental_form,
+    #results,
+    .car_description {
+        width: 80vw;
+    }
+
+    #rental_form #pickup_part select ,
+    #rental_form #pickup_part input {
+        margin: 0;
+        width: 32.5%;
+    }
+}
