--- a/e-learning-js/2-7(form-control-JS)/style.css
+++ b/e-learning-js/2-7(form-control-JS)/style.css
@@ -1,5 +1,5 @@
 body {
-    padding: 50px 0;
+    padding-top: 50px;
     display: flex;
     justify-content: center;
     border: 1px solid #CCC;
@@ -9,7 +9,7 @@ body {
 
 .form_col {
     display: inline-block;
-    margin-left: 15px;
+    margin-right: 15px;
     padding: 3px 0px;
     width: 200px;
     min-height: 1px;
@@ -17,36 +17,47 @@ body {
 }
 
 input {
-    padding: 3px;
-    border: 2px solid #CCC;
+    padding: 2px;
+    border: 1px solid #CCC;
     -moz-border-radius: 2px;
     -webkit-border-radius: 2px;
-    border-radius: 3px;
+    border-radius: 2px;
 }
 
 input:focus {
+    border-color: rgba(82, 168, 236, 0.75);
+    -moz-box-shadow: 0 0 8px rgba(82, 168, 236, 0.5);
+    -webkit-box-shadow: 0 0 8px rgba(82, 168, 236, 0.5);
+    box-shadow: 0 0 8px rgba(82, 168, 236, 0.5);
+}
+
+.correct {
     border-color: green;
-    -moz-box-shadow: 0 0 10px green;
-    -webkit-box-shadow: 0 0 10px green;
+}
+
+.correct:focus {
+    border-color: green;
+    -moz-box-shadow: 0 0 8px green;
+    -webkit-box-shadow: 0 0 8px green;
     box-shadow: 0 0 8px green;
 }
 
-
-/* ------------------------------- */
 .incorrect {
     border-color: red;
 }
+
 .incorrect:focus {
     border-color: red;
     -moz-box-shadow: 0 0 8px red;
     -webkit-box-shadow: 0 0 8px red;
     box-shadow: 0 0 8px red;
 }
+
 .tooltip {
     display: inline-block;
     margin-left: 20px;
     padding: 2px 4px;
-    border: 1px solid rgb(139, 137, 137);
+    border: 1px solid #555;
     background-color: #CCC;
     -moz-border-radius: 4px;
     -webkit-border-radius: 4px;
